--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
             <h2 class="sections-name">Our Team</h2>
             <ul class="team-list">
-                <li class="team-item"><img class="team-image" src="./images/img_1.jpg" alt="photo of the first member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_1.jpg 1x, ./images/img_1@2x.jpg 2x" src="./images/img_1.jpg" alt="photo of the first member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Mark Guerrero</h3>
                         <p class="position">Product Designer</p>
@@ -140,7 +140,7 @@
                         </ul>
                     </div>            
                 </li>
-                <li class="team-item"><img class="team-image" src="./images/img_2.jpg" alt="photo of the second member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_2.jpg 1x, ./images/img_2@2X.jpg 2x" src="./images/img_2.jpg" alt="photo of the second member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Tom Ford</h3>
                         <p class="position">Frontend Developer</p>
@@ -176,7 +176,7 @@
                         </ul>
                     </div>                    
                 </li>
-                <li class="team-item"><img class="team-image" src="./images/img_3.jpg" alt="photo of the third member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_3.jpg 1x, ./images/img_3@2X.jpg 2x" src="./images/img_3.jpg" alt="photo of the third member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Camila Garcia</h3>
                         <p class="position">Marketing</p>
@@ -212,7 +212,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="team-item"><img class="team-image" src="./images/img_4.jpg" alt="photo of the fourth member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_4.jpg 1x, ./images/img_4@2x.jpg 2x" src="./images/img_4.jpg" alt="photo of the fourth member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Daniel Wilson</h3>
                         <p class="position">UI Designer</p>
@@ -259,9 +259,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/banking-app.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/banking-app-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/banking-app.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/banking-app.jpg 1x, ./images/portfolio/banking-app@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/banking-app-tablet.jpg 1x, ./images/portfolio/banking-app-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/banking-app.jpg 1x, ./images/portfolio/banking-app@2x.jpg 2x" media="(max-width: 767px)">
                             <img class="case-image" src="./images/portfolio/banking-app.jpg" alt="Illustration for Banking App" width="360">
                         </picture>                        
                         <p class="overlay">
@@ -277,9 +277,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/cashless-payment.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/cashless-payment-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/cashless-payment.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/cashless-payment.jpg 1x,./images/portfolio/cashless-payment@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/cashless-payment-tablet.jpg 1x, ./images/portfolio/cashless-payment-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/cashless-payment.jpg 1x, ./images/portfolio/cashless-payment@2x.jpg 2x" media="(max-width: 767px)">
                             <img class="case-image" src="./images/portfolio/cashless-payment.jpg" alt="Illustration for Cashless Payment"
                                 width="360">
                         </picture>
@@ -299,9 +299,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/meditation-app.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/meditation-app-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/meditation-app.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/meditation-app.jpg 1x, ./images/portfolio/meditation-app@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/meditation-app-tablet.jpg 1x, ./images/portfolio/meditation-app-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/meditation-app.jpg 1x, ./images/portfolio/meditation-app@2x.jpg 2x" media="(max-width: 767px)">
                             <img class="case-image" src="./images/portfolio/meditation-app.jpg" alt="Illustration for Meditation App" width="360">
                         </picture>
                        
@@ -319,9 +319,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/taxi-service.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/taxi-service-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/taxi-service.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/taxi-service.jpg 1x,./images/portfolio/taxi-service@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/taxi-service-tablet.jpg 1x,./images/portfolio/taxi-service-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/taxi-service.jpg 1x,./images/portfolio/taxi-service@2x.jpg 2x" media="(max-width: 767px)">
                         <img class="case-image" src="./images/portfolio/taxi-service.jpg" alt="Illustration for Taxi Service" width="360">
                         </picture>                        
                         <p class="overlay">
@@ -338,9 +338,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/screen-illustrations.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/screen-illustration-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/screen-illustrations.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/screen-illustrations.jpg 1x, ./images/portfolio/screen-illustrations@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/screen-illustration-tablet.jpg 1x, ./images/portfolio/screen-illustration-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/screen-illustrations.jpg 1x, ./images/portfolio/screen-illustrations@2x.jpg 2x" media="(max-width: 767px)">
                         <img class="case-image" src="./images/portfolio/screen-illustrations.jpg" alt="Illustration for Screen Illustrations"
                             width="360">
                         </picture>
@@ -359,9 +359,9 @@
                 <li class="case-item">
                     <div class="case-overlay">
                         <picture>
-                            <source srcset="./images/portfolio/online-courses.jpg" media="(min-width: 1158px)">
-                            <source srcset="./images/portfolio/online-course-tablet.jpg" media="(min-width: 768px)" width="356">
-                            <source srcset="./images/portfolio/online-courses.jpg" media="(max-width: 767px)">
+                            <source srcset="./images/portfolio/online-courses.jpg 1x, ./images/portfolio/online-courses@2x.jpg 2x" media="(min-width: 1158px)">
+                            <source srcset="./images/portfolio/online-course-tablet.jpg 1x, ./images/portfolio/online-course-tablet@2x.jpg 2x" media="(min-width: 768px)" width="356">
+                            <source srcset="./images/portfolio/online-courses.jpg 1x, ./images/portfolio/online-courses@2x.jpg 2x" media="(max-width: 767px)">
                         <img class="case-image" src="./images/portfolio/online-courses.jpg" alt="Illustration for Online Courses" width="360">
                         </picture>
                         
