--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </div>       
     </div>    
 </footer>
-<div class="backdrop">
+<div class="backdrop is-open">
     <div class="modal">
         <button class="modal-close-btn" type="button">
             <svg class="modal-close-icon" width="8" height="8">
@@ -489,10 +489,10 @@
                             <use href="./images/icons.svg#icon-click"></use>
                         </svg>
                     </span>
-                    <div class="privacy-policy">
+                    <span class="privacy-policy">
                         I accept the terms and conditions of the
                         <a class="privacy-policy-link" href="">Privacy Policy</a>
-                    </div>                    
+                    </span>                    
                 </label>
             </div>
 
