--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
             <h2 class="sections-name">Our Team</h2>
             <ul class="team-list">
-                <li class="team-item"><img class="team-image" srcset="./images/img_1.jpg 1x, ./images/img_1@2x.jpg 2x" src="./images/img_1.jpg" alt="photo of the first member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_1.jpg 1x,./images/img_1@2X.jpg 2x" src="./images/img_1.jpg" alt="photo of the first member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Mark Guerrero</h3>
                         <p class="position">Product Designer</p>
@@ -140,7 +140,7 @@
                         </ul>
                     </div>            
                 </li>
-                <li class="team-item"><img class="team-image" srcset="./images/img_2.jpg 1x, ./images/img_2@2X.jpg 2x" src="./images/img_2.jpg" alt="photo of the second member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_2.jpg 1x,./images/img_2@2X.jpg 2x" src="./images/img_2.jpg" alt="photo of the second member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Tom Ford</h3>
                         <p class="position">Frontend Developer</p>
@@ -438,7 +438,7 @@
         </div>       
     </div>    
 </footer>
-<div class="backdrop is-open">
+<div class="backdrop">
     <div class="modal">
         <button class="modal-close-btn" type="button">
             <svg class="modal-close-icon" width="8" height="8">
