--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </ul>
                     </div>            
                 </li>
-                <li class="team-item"><img class="team-image" srcset="./images/img_2.jpg 1x,./images/img_2@2X.jpg 2x" src="./images/img_2.jpg" alt="photo of the second member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_2.jpg 1x, ./images/img_2@2x.jpg 2x" src="./images/img_2.jpg" alt="photo of the second member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Tom Ford</h3>
                         <p class="position">Frontend Developer</p>
