--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
                 </div>                
             </div>
             <div class="call-back-form-wrapper">
-                <label class="call-back-form-label" for="phone">Phone</label>
+                <label class="call-back-form-label" for="user-phone">Phone</label>
                 <div class="call-back-input-wrapper">
-                    <input type="text" class="call-back-form-input" id="phone" name="phone"
+                    <input type="text" class="call-back-form-input" id="user-phone" name="user-phone"
                         pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required>
                     <svg class="call-back-form-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-phone"></use>
