--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
                 </div>                
             </div>
             <div class="call-back-form-wrapper">
-                <label class="call-back-form-label" for="email">Email</label>
+                <label class="call-back-form-label" for="user-email">Email</label>
                 <div class="call-back-input-wrapper">
-                    <input type="email" class="call-back-form-input" id="email" name="email" required>
+                    <input type="email" class="call-back-form-input" id="user-email" name="user-email" required>
                     <svg class="call-back-form-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
