--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
             <h2 class="sections-name">Our Team</h2>
             <ul class="team-list">
-                <li class="team-item"><img class="team-image" srcset="./images/img_1.jpg 1x,./images/img_1@2X.jpg 2x" src="./images/img_1.jpg" alt="photo of the first member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_1.jpg 1x,./images/img_1@2x.jpg 2x" src="./images/img_1.jpg" alt="photo of the first member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Mark Guerrero</h3>
                         <p class="position">Product Designer</p>
@@ -176,7 +176,7 @@
                         </ul>
                     </div>                    
                 </li>
-                <li class="team-item"><img class="team-image" srcset="./images/img_3.jpg 1x, ./images/img_3@2X.jpg 2x" src="./images/img_3.jpg" alt="photo of the third member" width="264">
+                <li class="team-item"><img class="team-image" srcset="./images/img_3.jpg 1x, ./images/img_3@2x.jpg 2x" src="./images/img_3.jpg" alt="photo of the third member" width="264">
                     <div class="members-info">
                         <h3 class="members-name">Camila Garcia</h3>
                         <p class="position">Marketing</p>
